page d'accueil avec filtre de recherche,

--- a/src/fr/eni/javaee/projetEncheres/messages/messages_erreur.properties
+++ b/src/fr/eni/javaee/projetEncheres/messages/messages_erreur.properties
@@ -25,7 +25,8 @@
 30003=La date et l'heure de début doivent êtres dans un format valide (aaaa-MM-dd) et (hh:mm).
 30004=La date et l'heure de fin doivent êtres dans un format valide (aaaa-MM-dd) et (hh:mm).
 30005=Le prix initial est obligatoire.
-30006=La catégorie est obligatoire.
+30006=La catégorie est obligatoire..
 30007=Le nom de la rue est obligatoire.
 30008=Le code postal est obligatoire.
 30009=La ville est obligatoire.
+30010=Erreur sur le filtre de la recherche d'articles.
