mise à jour utilisateur, profil

--- a/src/fr/eni/javaee/projetEncheres/messages/messages_erreur.properties
+++ b/src/fr/eni/javaee/projetEncheres/messages/messages_erreur.properties
@@ -4,7 +4,10 @@
 10001=Une erreur non gérée est survenue lors de l'enrgistrement des informations.
 #=>Erreurs Avis
 10002=La liste de articles est inaccessible pour le moment.
-
+10003=La page d'accueil est inaccessible.
+10004=La lecture des données utilisateur est impossible.
+10005=La création d'un utilisateur a échoué.
+10006=La modification de l'utilisateur a échoué
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
 20000=Le nom de l'article est obligatoire et ne doit pas dépasser 30 caractères.
